# smt

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
src/smt/: cli.py  utils.py
tests/: test_utils.py
