[project]
name = "smt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "yng87", email = "k.yanagi07@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "sagemaker>=2.244.2",
    "pyyaml>=6.0.2",
    "typer>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
]

[project.scripts]
smt = "smt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
